Kaggle Notebook | making a neural network using numpy | Version 3

--- a/making-a-neural-network.ipynb
+++ b/making-a-neural-network.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dbe2ad84",
+   "id": "c83b0567",
    "metadata": {
     "papermill": {
-     "duration": 0.003342,
-     "end_time": "2025-02-07T06:26:09.247656",
+     "duration": 0.003428,
+     "end_time": "2025-02-07T07:24:27.383272",
      "exception": false,
-     "start_time": "2025-02-07T06:26:09.244314",
+     "start_time": "2025-02-07T07:24:27.379844",
      "status": "completed"
     },
     "tags": []
@@ -22,21 +22,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be47ffc2",
+   "id": "e5dd4ec0",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-02-07T06:26:09.255054Z",
-     "iopub.status.busy": "2025-02-07T06:26:09.254614Z",
-     "iopub.status.idle": "2025-02-07T06:26:11.970241Z",
-     "shell.execute_reply": "2025-02-07T06:26:11.968984Z"
+     "iopub.execute_input": "2025-02-07T07:24:27.390881Z",
+     "iopub.status.busy": "2025-02-07T07:24:27.390451Z",
+     "iopub.status.idle": "2025-02-07T07:24:29.945572Z",
+     "shell.execute_reply": "2025-02-07T07:24:29.944081Z"
     },
     "papermill": {
-     "duration": 2.72133,
-     "end_time": "2025-02-07T06:26:11.972166",
+     "duration": 2.560891,
+     "end_time": "2025-02-07T07:24:29.947368",
      "exception": false,
-     "start_time": "2025-02-07T06:26:09.250836",
+     "start_time": "2025-02-07T07:24:27.386477",
      "status": "completed"
     },
     "tags": []
@@ -74,13 +74,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a444caca",
+   "id": "c2f2fd8e",
    "metadata": {
     "papermill": {
-     "duration": 0.002701,
-     "end_time": "2025-02-07T06:26:11.978036",
+     "duration": 0.004342,
+     "end_time": "2025-02-07T07:24:29.954976",
      "exception": false,
-     "start_time": "2025-02-07T06:26:11.975335",
+     "start_time": "2025-02-07T07:24:29.950634",
      "status": "completed"
     },
     "tags": []
@@ -92,19 +92,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c3919e75",
+   "id": "689a4ca0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-07T06:26:11.985681Z",
-     "iopub.status.busy": "2025-02-07T06:26:11.985120Z",
-     "iopub.status.idle": "2025-02-07T06:26:15.871430Z",
-     "shell.execute_reply": "2025-02-07T06:26:15.870394Z"
+     "iopub.execute_input": "2025-02-07T07:24:29.962886Z",
+     "iopub.status.busy": "2025-02-07T07:24:29.962352Z",
+     "iopub.status.idle": "2025-02-07T07:24:33.490747Z",
+     "shell.execute_reply": "2025-02-07T07:24:33.489675Z"
     },
     "papermill": {
-     "duration": 3.892002,
-     "end_time": "2025-02-07T06:26:15.873197",
+     "duration": 3.533883,
+     "end_time": "2025-02-07T07:24:33.492392",
      "exception": false,
-     "start_time": "2025-02-07T06:26:11.981195",
+     "start_time": "2025-02-07T07:24:29.958509",
      "status": "completed"
     },
     "tags": []
@@ -318,19 +318,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "cc34c29c",
+   "id": "d8028d4b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-07T06:26:15.880840Z",
-     "iopub.status.busy": "2025-02-07T06:26:15.880400Z",
-     "iopub.status.idle": "2025-02-07T06:26:15.886703Z",
-     "shell.execute_reply": "2025-02-07T06:26:15.885482Z"
+     "iopub.execute_input": "2025-02-07T07:24:33.500605Z",
+     "iopub.status.busy": "2025-02-07T07:24:33.500253Z",
+     "iopub.status.idle": "2025-02-07T07:24:33.505873Z",
+     "shell.execute_reply": "2025-02-07T07:24:33.504888Z"
     },
     "papermill": {
-     "duration": 0.012038,
-     "end_time": "2025-02-07T06:26:15.888431",
+     "duration": 0.011268,
+     "end_time": "2025-02-07T07:24:33.507323",
      "exception": false,
-     "start_time": "2025-02-07T06:26:15.876393",
+     "start_time": "2025-02-07T07:24:33.496055",
      "status": "completed"
     },
     "tags": []
@@ -353,13 +353,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dada3d1",
+   "id": "3e2f5b94",
    "metadata": {
     "papermill": {
-     "duration": 0.002842,
-     "end_time": "2025-02-07T06:26:15.894609",
+     "duration": 0.003194,
+     "end_time": "2025-02-07T07:24:33.514090",
      "exception": false,
-     "start_time": "2025-02-07T06:26:15.891767",
+     "start_time": "2025-02-07T07:24:33.510896",
      "status": "completed"
     },
     "tags": []
@@ -371,19 +371,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4fb9bab7",
+   "id": "d2942a2e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-07T06:26:15.902183Z",
-     "iopub.status.busy": "2025-02-07T06:26:15.901710Z",
-     "iopub.status.idle": "2025-02-07T06:26:16.492473Z",
-     "shell.execute_reply": "2025-02-07T06:26:16.491533Z"
+     "iopub.execute_input": "2025-02-07T07:24:33.522004Z",
+     "iopub.status.busy": "2025-02-07T07:24:33.521645Z",
+     "iopub.status.idle": "2025-02-07T07:24:34.076695Z",
+     "shell.execute_reply": "2025-02-07T07:24:34.075677Z"
     },
     "papermill": {
-     "duration": 0.596444,
-     "end_time": "2025-02-07T06:26:16.494139",
+     "duration": 0.560963,
+     "end_time": "2025-02-07T07:24:34.078375",
      "exception": false,
-     "start_time": "2025-02-07T06:26:15.897695",
+     "start_time": "2025-02-07T07:24:33.517412",
      "status": "completed"
     },
     "tags": []
@@ -410,7 +410,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 5, 1, ..., 7, 1, 2]])"
+       "array([[5, 6, 9, ..., 5, 9, 8]])"
       ]
      },
      "metadata": {},
@@ -419,7 +419,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[1, 7, 5, ..., 5, 2, 3]])"
+       "array([[6, 2, 3, ..., 3, 0, 5]])"
       ]
      },
      "metadata": {},
@@ -435,13 +435,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2a3b356",
+   "id": "7f4afc4f",
    "metadata": {
     "papermill": {
-     "duration": 0.003201,
-     "end_time": "2025-02-07T06:26:16.501093",
+     "duration": 0.003455,
+     "end_time": "2025-02-07T07:24:34.085704",
      "exception": false,
-     "start_time": "2025-02-07T06:26:16.497892",
+     "start_time": "2025-02-07T07:24:34.082249",
      "status": "completed"
     },
     "tags": []
@@ -452,45 +452,115 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ae5f15",
+   "id": "05ac6bd2",
    "metadata": {
     "papermill": {
-     "duration": 0.003194,
-     "end_time": "2025-02-07T06:26:16.507925",
+     "duration": 0.003428,
+     "end_time": "2025-02-07T07:24:34.092645",
      "exception": false,
-     "start_time": "2025-02-07T06:26:16.504731",
+     "start_time": "2025-02-07T07:24:34.089217",
      "status": "completed"
     },
     "tags": []
    },
    "source": [
-    "# Initialization: \n",
+    "# Initialization and Forward Propagation: \n",
     "1. weights\n",
     "2. biases \n",
     "3. arrays for each layer:\n",
     "    * input layer\n",
     "    * first reLU layer (a function applied to each node)\n",
-    "    * second output layer (which will also have a softmax to find a probability distribution of numbers) \n",
+    "    * second output layer (which will also have a softmax to find a probability distribution of numbers)\n",
+    "4. Make forward propagation \n",
     "\n",
-    "We are also going to start with random weights and biases."
+    "We are also going to start with random weights and biases. Below is a diagram in LaTeX explaining the matrix multiplcation, where matrix $B$ is our input layer tranposed multiplied by our $A$ matrix, and the biases being added as matrix $C$. The result will be a $10 * m$ matrix, where $m$ is the number of training pictures.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c57ed0a",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003328,
+     "end_time": "2025-02-07T07:24:34.099437",
+     "exception": false,
+     "start_time": "2025-02-07T07:24:34.096109",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "\n",
+    "\n",
+    "$$\\begin{bmatrix}\n",
+    "a_{11} & a_{12} & \\cdots & a_{1,784} \\\\\n",
+    "a_{21} & a_{22} & \\cdots & a_{2,784} \\\\\n",
+    "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "a_{10,1} & a_{10,2} & \\cdots & a_{10,784}\n",
+    "\\end{bmatrix}\n",
+    "\\times\n",
+    "\\begin{bmatrix}\n",
+    "b_{11} & b_{12} & \\cdots & b_{1m} \\\\\n",
+    "b_{21} & b_{22} & \\cdots & b_{2m} \\\\\n",
+    "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "b_{784,1} & b_{784,2} & \\cdots & b_{784,m}\n",
+    "\\end{bmatrix}\n",
+    "+\n",
+    "\\begin{bmatrix}\n",
+    "c_{11} & c_{12} & \\cdots & c_{1m} \\\\\n",
+    "c_{21} & c_{22} & \\cdots & c_{2m} \\\\\n",
+    "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "c_{10,1} & c_{10,2} & \\cdots & c_{10,m}\n",
+    "\\end{bmatrix}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a4d86bc",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003355,
+     "end_time": "2025-02-07T07:24:34.106282",
+     "exception": false,
+     "start_time": "2025-02-07T07:24:34.102927",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "Here are the softmax function and ReLU function definitions:\n",
+    "\n",
+    "$\n",
+    "\\text{softmax}(z_i) = \\frac{e^{z_i}}{\\sum_{j=1}^n e^{z_j}}\n",
+    "$\n",
+    "\n",
+    "where $z_i$ is the i-th element of the input vector z. The softmax function will apply this to each $z_i$.\n",
+    "\n",
+    "The softmax function is applied independently to each column of Z2. For a single column (logits for one image), softmax computes that equation.\n",
+    "\n",
+    "$\n",
+    "\\text{ReLU}(x) = \\max(0, x)\n",
+    "$\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e020c1d0",
+   "id": "9c240247",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-07T06:26:16.516025Z",
-     "iopub.status.busy": "2025-02-07T06:26:16.515626Z",
-     "iopub.status.idle": "2025-02-07T06:26:16.520179Z",
-     "shell.execute_reply": "2025-02-07T06:26:16.519161Z"
+     "iopub.execute_input": "2025-02-07T07:24:34.114663Z",
+     "iopub.status.busy": "2025-02-07T07:24:34.114298Z",
+     "iopub.status.idle": "2025-02-07T07:24:34.120916Z",
+     "shell.execute_reply": "2025-02-07T07:24:34.120039Z"
     },
     "papermill": {
-     "duration": 0.010378,
-     "end_time": "2025-02-07T06:26:16.521772",
+     "duration": 0.012654,
+     "end_time": "2025-02-07T07:24:34.122412",
      "exception": false,
-     "start_time": "2025-02-07T06:26:16.511394",
+     "start_time": "2025-02-07T07:24:34.109758",
      "status": "completed"
     },
     "tags": []
@@ -500,10 +570,49 @@
     "def init_params(): \n",
     "    # populate a 10 x 784 matrix with random numbers, W1 is weight for first layer\n",
     "    W1 = np.random.rand(10, 784) \n",
-    "    # continue with biases, which is actually \n",
-    "    b1 = np.random.rand()\n",
-    "        "
+    "    # continue with biases, which should be a 10x1 vector, which we will broadcast\n",
+    "    # 10x1 -> 10xm so we can add the dot product + b\n",
+    "    b1 = np.random.rand(10, 1) \n",
+    "    # second layer weights and biases\n",
+    "    W2 = np.random.rand(10, 10) \n",
+    "    b2 = np.random.rand(10, 1)\n",
+    "    return W1, b1, W2, b2\n",
+    "def reLU(Z): # return the same sized matrix, applied reLU\n",
+    "    for row in Z: \n",
+    "        for i in range(row): \n",
+    "            if row[i] < 0: \n",
+    "                row[i] = 0;\n",
+    "    return Z\n",
+    "    # better solution use np.maximum(0, Z)\n",
+    "def softMax(Z): # input: 10 x m matrix\n",
+    "    return np.exp(Z) / np.sum(np.exp(Z)) \n",
+    "    # collapses all rows to one and preserves columns\n",
+    "    \n",
+    "def forward_propagation(W1, b1, W2, b2, X): # X is the initial input matrix\n",
+    "    # Z1 will be the resulting matrix from matrix multiplication\n",
+    "    Z1 = W1.dot(X) + b1 \n",
+    "    # apply reLU to change from linear combination -> non-linear function\n",
+    "    A1 = ReLu(Z1)\n",
+    "    Z2 = W2.dot(A1) + b2 # 10 x m\n",
+    "    A2 = SoftMax(Z2)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "362f5ce8",
+   "metadata": {
+    "papermill": {
+     "duration": 0.00347,
+     "end_time": "2025-02-07T07:24:34.129852",
+     "exception": false,
+     "start_time": "2025-02-07T07:24:34.126382",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -546,14 +655,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 11.052998,
-   "end_time": "2025-02-07T06:26:17.250446",
+   "duration": 10.326315,
+   "end_time": "2025-02-07T07:24:34.854045",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-02-07T06:26:06.197448",
+   "start_time": "2025-02-07T07:24:24.527730",
    "version": "2.6.0"
   }
  },
